--- a/style.css
+++ b/style.css
@@ -258,6 +258,21 @@ main {
   font-weight: 600;
 }
 
+/* new class for action notes */
+
+.action-notes {
+  font-size: 0.9rem;
+  background: #eef3ff;
+  padding: 0.6rem 0.8rem;
+  /* border-left: 3px solid var(--cxb-teal); */
+  /* border-right: 3px solid var(--cxb-teal); */
+  border-radius: 4px;
+  margin-bottom: 0.8rem;
+  padding-left: 10px;
+  padding-right: 120px;
+}
+
+
 .action-code {
   font-size: 0.85rem;
   color: var(--cxb-muted);
